--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -62,7 +62,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/editText_number"
         android:layout_width="210dp"
         android:layout_height="40dp"
         android:layout_marginStart="28dp"
@@ -73,7 +73,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editText_name" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/editText_address"
         android:layout_width="210dp"
         android:layout_height="40dp"
         android:layout_marginStart="28dp"
@@ -81,7 +81,7 @@
         android:ems="10"
         android:inputType="textPersonName"
         app:layout_constraintStart_toEndOf="@+id/textView3"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
+        app:layout_constraintTop_toBottomOf="@+id/editText_number" />
 
     <Button
         android:id="@+id/button2"
