--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -107,14 +107,17 @@
 
     <EditText
         android:id="@+id/editText_search"
-        android:layout_width="181dp"
-        android:layout_height="48dp"
-        android:layout_marginBottom="156dp"
-        android:layout_marginEnd="36dp"
+        android:layout_width="117dp"
+        android:layout_height="44dp"
+        android:layout_marginBottom="96dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginStart="8dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:text="Name"
+        android:text="Search"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.921"
+        app:layout_constraintStart_toEndOf="@+id/button2" />
 
 </android.support.constraint.ConstraintLayout>
